--- a/package.json
+++ b/package.json
@@ -36,5 +36,12 @@
     "vite": "^6.0.9",
     "vite-join-media-queries": "^0.1.4",
     "vite-plugin-handlebars": "^2.0.0"
+  },
+  "dependencies": {
+    "@types/aos": "^3.0.7",
+    "@types/micromodal": "^0.3.5",
+    "aos": "^2.3.4",
+    "micromodal": "^0.4.10",
+    "swiper": "^8.4.7"
   }
 }
