--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/aos": "^3.0.7",
     "@types/micromodal": "^0.3.5",
     "aos": "^2.3.4",
+    "lenis": "^1.2.3",
     "micromodal": "^0.4.10",
     "swiper": "^8.4.7"
   }
